--- a/MVC/CIPlatform/CIPlatform/Views/Home/StoryDetails.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/StoryDetails.cshtml
@@ -96,7 +96,7 @@
                   
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Add Profile</a></li>
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="EditProfile">User Edit Profile</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#">Volunteering Timesheet</a></li>
                         <li><hr class="dropdown-divider"></li>
