--- a/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
@@ -183,7 +183,7 @@
 
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Add Profile</a></li>
+                            <li><a class="dropdown-item" asp-controller="Home" asp-action="EditProfile">User Edit Profile</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Volunteering Timesheet</a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -1216,12 +1216,67 @@
                                                     <br>
                                                     <div class="row">
                                                         <div class="col-12" style="text-align: center;">
-                                                            <button class="apply-btn" style="margin-left: 0%;">
+                      @*                                      <button class="apply-btn" style="margin-left: 0%;">
                                                                 Apply
 
                                                                 <img src="~/NewFolder/right-arrow.png" alt="" class="right-arrow">
 
-                                                            </button>
+                                                            </button>*@
+
+                                                                @{
+
+
+
+
+
+                                var lengths = ViewBag.missionapplication.Count;
+                                for (int k = 0; k < lengths; k++)
+                                {
+                                    if (ViewBag.Missionapplication[k].MissionId == itemsname.m.MissionId)
+                                    {
+
+                                        <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@itemsname.m.MissionId">
+                                            <button type="submit" class="apply-btn" style="margin-left:1%; margin-top:5%;">
+
+                                                View Details <img src="~/NewFolder/right-arrow.png">
+                                            </button>
+                                        </a>
+                                        break;
+                                    }
+                                    else
+                                    {
+                                        if (k == lengths - 1)
+                                        {
+                                            var a = itemsname.m.EndDate;
+                                            var res = DateTime.Compare(ViewBag.currentDate, itemsname.m.EndDate);
+                                            if (res == 1)
+                                            {
+                                                <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@itemsname.m.MissionId">
+                                                    <button type="submit" class="apply-btn" style="margin-left:1%;  margin-top:5%;">
+
+                                                        View Details <img src="~/NewFolder/right-arrow.png">
+                                                    </button>
+                                                </a>
+                                            }
+                                            else
+                                            {
+                                                <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@itemsname.m.MissionId">
+                                                    <button type="submit" class="apply-btn" style="margin-left:1%;  margin-top:5%;">
+
+                                                        Apply  <img src="~/NewFolder/right-arrow.png">
+                                                    </button>
+                                                </a>
+                                            }
+                                        }
+
+
+                                    }
+
+                                }
+
+
+
+                            }
                                                         </div>
                                                     </div>
 
