--- a/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
@@ -113,12 +113,14 @@
 </header>
 <body>
 
-    <div class="main-div" onchange="userprofile()">
+    <div class="main-div" onchange="editUser()">
 
+        
         <div class="row">
 
             <div class="col-4">
 
+                
                 <div class="left-div">
                     <div>
                         <img class="img-left" src="~/NewFolder/user-img-large.png" />
@@ -188,6 +190,7 @@
                     </div>
                 </div>
 
+                
             </div>
             <div class="col-6" style="margin-left:5%;">
                 @{
@@ -307,18 +310,14 @@
                             <label for="" class="form-label">Select your availability</label>
                             <br />
                             <!-- Example single danger button -->
-                            <div class="btn-group" style="width:100%;">
-                                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" style="color:white;">
-                                    Action
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#">Separated link</a></li>
-                                </ul>
-                            </div>
+                          <select name="availability" id="selectavailability" onchange="getavailability()" style="border:1px solid #D9D9D9 ; width:100% ;height :40px">
+                                   
+                                        <option selected disabled>Select your availability</option>
+                                        
+                                         <option id="daily" value="Daily">Daily</option>
+                                         <option id="weekend" value="Weekend">Weekend</option>
+                                     
+                                </select>
                         </div>
 
                         <div class="col-6">
@@ -441,7 +440,8 @@
             </div>
             <div class="col-2"></div>
         </div>
-
+    
+    
     </div>
     <br />
     <hr />
