Completed privacy policy and logout

--- a/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
@@ -399,6 +399,7 @@
                                                     </div>
                                                     <div class="col">
                                                         <select id="select-right" class="form-select" multiple>
+
                                                         </select>
                                                     </div>
                                                 </div>
@@ -452,7 +453,7 @@
             <div class="row">
 
                 <div class="col-1" style="margin-left:20%;">
-                    <a href="#" class="privacyp">Privacy Policy</a>
+                    <a asp-action="PrivacyPolicy" asp-controller="Home" class="privacyp">Privacy Policy</a>
                 </div>
 
                 <div class="col-1">
