Completed Volunteering Timesheet (Goal Based)

--- a/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
@@ -43,6 +43,7 @@
 
     <link rel="stylesheet" href="~/css/platformlandingpage.css">
     <link rel="stylesheet" href="~/css/volLanding.css">
+    
 
 
     <title>Volunteering Mission Page</title>
@@ -525,7 +526,7 @@
                                                         </li>
                                                     }
                                                     <br>
-                                                    <button id="btn_" onclick="rccall(@item.MissionId)">Submit</button>
+                                                    <button id="btn_" onclick="rccall(@item.MissionId)">Send</button>
 
                                                 </ul>
                                             </li>
