--- a/MVC/CIPlatform/CIPlatform/Views/Home/Registration.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Registration.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+
     <title>Registration</title>
 </head>
 
@@ -119,7 +120,7 @@
                             <div>
 
                                 <label asp-for="FirstName" class="form-label">First name</label>
-                                <input asp-for="FirstName" type="text" placeholder="Enter your First Name" class="form-control" class="form-control1">
+                                <input asp-for="FirstName" type="text" placeholder="Enter your First Name" class="form-control">
                                 <span asp-validation-for="FirstName" class="text-danger" style="font-size:12px;"></span>
 
 
@@ -189,6 +190,7 @@
         window.history.replaceState( null, null, window.location.href );
     }
 </script>
+
 </body>
 
 </html>
